argocd/argocd-app1-gw-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: argocd
  name: argocd-gateway
spec:
  selector:
    app: istio-ingressgateway # label on the ingress pod
    istio: istio-ingressgateway-argocd  # label on the ingress pod
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---



apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: argocd
  labels:
  name: dr-argocd-app3
spec:
  host: argocd-svc.argocd.svc.cluster.local
  subsets:
  - labels:
      app: argocd-app3
    name: leonpython-app3-ss
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: argocd
  labels:
    app: argocd-app3
  name: app3-vs
spec:
  hosts:
  - 20.84.31.115
  gateways:
  - argocd-gateway
  http:
  - match:
     - uri:
        prefix: "/app3"
    rewrite:
      uri: "/"    
    route:
    - destination:
        host: argocd-svc.argocd.svc.cluster.local
